--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,7 @@
+<% provide(:title, 'About') %>
+
 <h1>About Us</h1>
 <p>
 	The Ruby on Rails Tutorial is a project to make a book and screncats to teach web development with Ruby on Rails.
 <p>
+
